--- a/share/gui/smyrna.glade
+++ b/share/gui/smyrna.glade
@@ -1444,6 +1444,31 @@ topview</property>
 		      <property name="homogeneous">True</property>
 		    </packing>
 		  </child>
+
+		  <child>
+		    <widget class="GtkToolItem" id="toolitem1">
+		      <property name="visible">True</property>
+		      <property name="visible_horizontal">True</property>
+		      <property name="visible_vertical">True</property>
+		      <property name="is_important">False</property>
+
+		      <child>
+			<widget class="GtkButton" id="button7">
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="label" translatable="yes">test gvpr</property>
+			  <property name="use_underline">True</property>
+			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <property name="focus_on_click">True</property>
+			  <signal name="clicked" handler="mTestgvpr" last_modification_time="Wed, 29 Apr 2009 14:54:06 GMT"/>
+			</widget>
+		      </child>
+		    </widget>
+		    <packing>
+		      <property name="expand">False</property>
+		      <property name="homogeneous">False</property>
+		    </packing>
+		  </child>
 		</widget>
 		<packing>
 		  <property name="tab_expand">False</property>
@@ -4644,8 +4669,8 @@ topview</property>
 
 	      <child>
 		<widget class="GtkTable" id="table4">
-		  <property name="width_request">340</property>
-		  <property name="height_request">383</property>
+		  <property name="width_request">366</property>
+		  <property name="height_request">408</property>
 		  <property name="visible">True</property>
 		  <property name="n_rows">13</property>
 		  <property name="n_columns">3</property>
@@ -4932,7 +4957,7 @@ topview</property>
 		  <child>
 		    <widget class="GtkLabel" id="label41">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Randomize Edge Colors</property>
+		      <property name="label" translatable="yes">Default Edge Color</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">False</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -4958,7 +4983,7 @@ topview</property>
 		  <child>
 		    <widget class="GtkLabel" id="label40">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Randomize Node Colors</property>
+		      <property name="label" translatable="yes">Default Node Color</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">False</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -5168,10 +5193,136 @@ topview</property>
 		      <property name="x_options"></property>
 		    </packing>
 		  </child>
+
+		  <child>
+		    <widget class="GtkLabel" id="label117">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Color Theme</property>
+		      <property name="use_underline">False</property>
+		      <property name="use_markup">False</property>
+		      <property name="justify">GTK_JUSTIFY_LEFT</property>
+		      <property name="wrap">False</property>
+		      <property name="selectable">False</property>
+		      <property name="xalign">0</property>
+		      <property name="yalign">0.5</property>
+		      <property name="xpad">5</property>
+		      <property name="ypad">0</property>
+		      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+		      <property name="width_chars">-1</property>
+		      <property name="single_line_mode">False</property>
+		      <property name="angle">0</property>
+		    </widget>
+		    <packing>
+		      <property name="left_attach">0</property>
+		      <property name="right_attach">1</property>
+		      <property name="top_attach">11</property>
+		      <property name="bottom_attach">12</property>
+		      <property name="x_options">fill</property>
+		      <property name="y_options"></property>
+		    </packing>
+		  </child>
+
+		  <child>
+		    <widget class="GtkComboBoxEntry" id="colorthemecb">
+		      <property name="visible">True</property>
+		      <property name="items" translatable="yes">Ice Blue
+All Pastel
+Magma
+Rain Forest</property>
+		      <property name="add_tearoffs">False</property>
+		      <property name="has_frame">True</property>
+		      <property name="focus_on_click">True</property>
+		    </widget>
+		    <packing>
+		      <property name="left_attach">1</property>
+		      <property name="right_attach">2</property>
+		      <property name="top_attach">11</property>
+		      <property name="bottom_attach">12</property>
+		      <property name="x_options">fill</property>
+		      <property name="y_options">fill</property>
+		    </packing>
+		  </child>
+
+		  <child>
+		    <widget class="GtkColorButton" id="DefaultNodeCbtn">
+		      <property name="visible">True</property>
+		      <property name="use_alpha">False</property>
+		      <property name="focus_on_click">True</property>
+		    </widget>
+		    <packing>
+		      <property name="left_attach">1</property>
+		      <property name="right_attach">2</property>
+		      <property name="top_attach">3</property>
+		      <property name="bottom_attach">4</property>
+		    </packing>
+		  </child>
+
+		  <child>
+		    <widget class="GtkLabel" id="label118">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Edge Attr. For Color</property>
+		      <property name="use_underline">False</property>
+		      <property name="use_markup">False</property>
+		      <property name="justify">GTK_JUSTIFY_LEFT</property>
+		      <property name="wrap">False</property>
+		      <property name="selectable">False</property>
+		      <property name="xalign">0</property>
+		      <property name="yalign">0.5</property>
+		      <property name="xpad">5</property>
+		      <property name="ypad">0</property>
+		      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+		      <property name="width_chars">-1</property>
+		      <property name="single_line_mode">False</property>
+		      <property name="angle">0</property>
+		    </widget>
+		    <packing>
+		      <property name="left_attach">0</property>
+		      <property name="right_attach">1</property>
+		      <property name="top_attach">12</property>
+		      <property name="bottom_attach">13</property>
+		      <property name="x_options">fill</property>
+		      <property name="y_options"></property>
+		    </packing>
+		  </child>
+
+		  <child>
+		    <widget class="GtkEntry" id="edgecolortxt">
+		      <property name="visible">True</property>
+		      <property name="can_focus">True</property>
+		      <property name="editable">True</property>
+		      <property name="visibility">True</property>
+		      <property name="max_length">0</property>
+		      <property name="text" translatable="yes"></property>
+		      <property name="has_frame">True</property>
+		      <property name="invisible_char">*</property>
+		      <property name="activates_default">False</property>
+		    </widget>
+		    <packing>
+		      <property name="left_attach">1</property>
+		      <property name="right_attach">2</property>
+		      <property name="top_attach">12</property>
+		      <property name="bottom_attach">13</property>
+		      <property name="y_options"></property>
+		    </packing>
+		  </child>
+
+		  <child>
+		    <widget class="GtkColorButton" id="DefaultEdgeCbtn">
+		      <property name="visible">True</property>
+		      <property name="use_alpha">False</property>
+		      <property name="focus_on_click">True</property>
+		    </widget>
+		    <packing>
+		      <property name="left_attach">1</property>
+		      <property name="right_attach">2</property>
+		      <property name="top_attach">4</property>
+		      <property name="bottom_attach">5</property>
+		    </packing>
+		  </child>
 		</widget>
 		<packing>
-		  <property name="x">6</property>
-		  <property name="y">29</property>
+		  <property name="x">10</property>
+		  <property name="y">17</property>
 		</packing>
 	      </child>
 
@@ -5196,8 +5347,8 @@ topview</property>
 		  <property name="angle">0</property>
 		</widget>
 		<packing>
-		  <property name="x">195</property>
-		  <property name="y">6</property>
+		  <property name="x">184</property>
+		  <property name="y">0</property>
 		</packing>
 	      </child>
 
@@ -5222,20 +5373,8 @@ topview</property>
 		  <property name="angle">0</property>
 		</widget>
 		<packing>
-		  <property name="x">285</property>
-		  <property name="y">6</property>
-		</packing>
-	      </child>
-
-	      <child>
-		<widget class="GtkHSeparator" id="hseparator8">
-		  <property name="width_request">89</property>
-		  <property name="height_request">20</property>
-		  <property name="visible">True</property>
-		</widget>
-		<packing>
-		  <property name="x">196</property>
-		  <property name="y">16</property>
+		  <property name="x">325</property>
+		  <property name="y">0</property>
 		</packing>
 	      </child>
 
