--- a/share/gui/smyrna.glade
+++ b/share/gui/smyrna.glade
@@ -1453,15 +1453,7 @@ topview</property>
 		      <property name="is_important">False</property>
 
 		      <child>
-			<widget class="GtkButton" id="button7">
-			  <property name="visible">True</property>
-			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">test gvpr</property>
-			  <property name="use_underline">True</property>
-			  <property name="relief">GTK_RELIEF_NORMAL</property>
-			  <property name="focus_on_click">True</property>
-			  <signal name="clicked" handler="mTestgvpr" last_modification_time="Wed, 29 Apr 2009 14:54:06 GMT"/>
-			</widget>
+			<placeholder/>
 		      </child>
 		    </widget>
 		    <packing>
@@ -4638,7 +4630,7 @@ topview</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
 	      <property name="response_id">0</property>
-	      <signal name="clicked" handler="on_settingsOKBtn_clicked"/>
+	      <signal name="clicked" handler="mTestgvpr" last_modification_time="Tue, 26 May 2009 15:47:23 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
@@ -7290,7 +7282,7 @@ Custom</property>
 		      <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 		      <child>
-			<widget class="GtkTextView" id="textview2">
+			<widget class="GtkTextView" id="gvprtextinput">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="editable">True</property>
@@ -7305,7 +7297,10 @@ Custom</property>
 			  <property name="left_margin">0</property>
 			  <property name="right_margin">0</property>
 			  <property name="indent">0</property>
-			  <property name="text" translatable="yes"></property>
+			  <property name="text" translatable="yes">sfsdfsd
+sfdsdfsdfsd
+fsdf
+sdfsdff</property>
 			</widget>
 		      </child>
 		    </widget>
@@ -7357,7 +7352,7 @@ Custom</property>
 			  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
 			  <child>
-			    <widget class="GtkTextView" id="textview3">
+			    <widget class="GtkTextView" id="gvprtextoutput">
 			      <property name="visible">True</property>
 			      <property name="can_focus">True</property>
 			      <property name="editable">True</property>
@@ -7398,7 +7393,7 @@ Custom</property>
 		      <property name="spacing">0</property>
 
 		      <child>
-			<widget class="GtkCheckButton" id="checkbutton1">
+			<widget class="GtkCheckButton" id="gvprapplycb">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="label" translatable="yes">Apply to Current Graph</property>
@@ -7417,13 +7412,14 @@ Custom</property>
 		      </child>
 
 		      <child>
-			<widget class="GtkButton" id="button4">
+			<widget class="GtkButton" id="gvprbuttonload">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="label" translatable="yes">Load</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
+			  <signal name="clicked" handler="on_gvprbuttonload_clicked" last_modification_time="Fri, 22 May 2009 16:45:40 GMT"/>
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
@@ -7433,7 +7429,7 @@ Custom</property>
 		      </child>
 
 		      <child>
-			<widget class="GtkButton" id="button5">
+			<widget class="GtkButton" id="gvprbuttonsave">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
 			  <property name="label" translatable="yes">Save</property>
@@ -7449,13 +7445,14 @@ Custom</property>
 		      </child>
 
 		      <child>
-			<widget class="GtkButton" id="button6">
+			<widget class="GtkButton" id="button8">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">RUN!</property>
+			  <property name="label" translatable="yes">test gvpr</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
+			  <signal name="clicked" handler="mTestgvpr" last_modification_time="Wed, 29 Apr 2009 14:54:06 GMT"/>
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
