--- a/share/gui/smyrna.glade
+++ b/share/gui/smyrna.glade
@@ -4630,7 +4630,7 @@ topview</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
 	      <property name="response_id">0</property>
-	      <signal name="clicked" handler="mTestgvpr" last_modification_time="Tue, 26 May 2009 15:47:23 GMT"/>
+	      <signal name="clicked" handler="on_settingsOKBtn_clicked" last_modification_time="Tue, 26 May 2009 19:00:55 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
