Removed junk from original gvpr window

--- a/share/gui/smyrna.glade
+++ b/share/gui/smyrna.glade
@@ -7297,10 +7297,7 @@ Custom</property>
 			  <property name="left_margin">0</property>
 			  <property name="right_margin">0</property>
 			  <property name="indent">0</property>
-			  <property name="text" translatable="yes">sfsdfsd
-sfdsdfsdfsd
-fsdf
-sdfsdff</property>
+			  <property name="text" translatable="yes"> </property>
 			</widget>
 		      </child>
 		    </widget>
