--- a/share/gui/smyrna.glade
+++ b/share/gui/smyrna.glade
@@ -5376,7 +5376,7 @@ Custom</property>
 			<widget class="GtkCheckButton" id="gvprapplycb">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">Apply to Current Graph</property>
+			  <property name="label" translatable="yes">Clone Current Graph</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
