--- a/share/gui/smyrna.glade
+++ b/share/gui/smyrna.glade
@@ -2562,7 +2562,19 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkButton" id="settingsOKBtn">
+	    <widget class="GtkButton" id="button12">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">Apply</property>
+	      <property name="use_underline">True</property>
+	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="focus_on_click">True</property>
+	      <property name="response_id">0</property>
+	      <signal name="clicked" handler="on_settingsApplyBtn_clicked" last_modification_time="Mon, 20 Jul 2009 16:39:55 GMT"/>
+	    </widget>
+	  </child>
+
+	  <child>
+	    <widget class="GtkButton" id="button11">
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">OK</property>
 	      <property name="use_underline">True</property>
@@ -5278,24 +5290,24 @@ Custom</property>
 			</packing>
 		      </child>
 
-		  <child>
-		    <widget class="GtkEntry" id="gvprargs">
-		      <property name="visible">True</property>
-		      <property name="can_focus">True</property>
-		      <property name="editable">True</property>
-		      <property name="visibility">True</property>
-		      <property name="max_length">0</property>
-		      <property name="text" translatable="yes"></property>
-		      <property name="has_frame">True</property>
-		      <property name="invisible_char">*</property>
-		      <property name="activates_default">False</property>
-		    </widget>
-		    <packing>
+		      <child>
+			<widget class="GtkEntry" id="gvprargs">
+			  <property name="visible">True</property>
+			  <property name="can_focus">True</property>
+			  <property name="editable">True</property>
+			  <property name="visibility">True</property>
+			  <property name="max_length">0</property>
+			  <property name="text" translatable="yes"></property>
+			  <property name="has_frame">True</property>
+			  <property name="invisible_char">*</property>
+			  <property name="activates_default">False</property>
+			</widget>
+			<packing>
 			  <property name="padding">0</property>
 			  <property name="expand">False</property>
 			  <property name="fill">False</property>
-		    </packing>
-		  </child>
+			</packing>
+		      </child>
 
 		      <child>
 			<widget class="GtkLabel" id="label114">
