--- a/share/gui/smyrna.glade
+++ b/share/gui/smyrna.glade
@@ -2561,7 +2561,7 @@ GLUT_BITMAP_HELVETICA_18
 		      <property name="update_policy">GTK_UPDATE_ALWAYS</property>
 		      <property name="snap_to_ticks">False</property>
 		      <property name="wrap">False</property>
-		      <property name="adjustment">1200 0 5000 1 50 50</property>
+		      <property name="adjustment">10 0 100 1 50 50</property>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">1</property>
@@ -2575,7 +2575,7 @@ GLUT_BITMAP_HELVETICA_18
 		  <child>
 		    <widget class="GtkLabel" id="label110">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Max # of nodes to display</property>
+		      <property name="label" translatable="yes">Detail Level (1-100) </property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">False</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
