--- a/share/gui/smyrna.glade
+++ b/share/gui/smyrna.glade
@@ -2282,7 +2282,7 @@ GLUT_BITMAP_HELVETICA_18
 		  <child>
 		    <widget class="GtkLabel" id="label110">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">labeling detail level(1-100)</property>
+		      <property name="label" translatable="yes">Labeling Level (1-100)</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">False</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
