--- a/share/gui/smyrna.glade
+++ b/share/gui/smyrna.glade
@@ -540,11 +540,11 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkButton" id="btnTVHideAll1">
+	    <widget class="GtkButton" id="btnTVSave">
 	      <property name="width_request">150</property>
 	      <property name="height_request">25</property>
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Save As Subgraph</property>
+	      <property name="label" translatable="yes">Save</property>
 	      <property name="use_underline">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
@@ -552,6 +552,23 @@
 	    </widget>
 	    <packing>
 	      <property name="x">216</property>
+	      <property name="y">8</property>
+	    </packing>
+	  </child>
+
+	  <child>
+	    <widget class="GtkButton" id="bntTVSaveWith">
+	      <property name="width_request">150</property>
+	      <property name="height_request">25</property>
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">Save with Edges</property>
+	      <property name="use_underline">True</property>
+	      <property name="relief">GTK_RELIEF_NORMAL</property>
+	      <property name="focus_on_click">True</property>
+	      <signal name="clicked" handler="btnTVSaveWith_clicked_cb"/>
+	    </widget>
+	    <packing>
+	      <property name="x">368</property>
 	      <property name="y">8</property>
 	    </packing>
 	  </child>
