--- a/cmd/gvedit/ui/settings.ui
+++ b/cmd/gvedit/ui/settings.ui
@@ -6,9 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>403</width>
+    <width>404</width>
     <height>512</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>404</width>
+    <height>512</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>404</width>
+    <height>512</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -269,7 +287,7 @@
      <rect>
       <x>2</x>
       <y>0</y>
-      <width>436</width>
+      <width>401</width>
       <height>62</height>
      </rect>
     </property>
