--- a/cmd/gvedit/ui/settings.ui
+++ b/cmd/gvedit/ui/settings.ui
@@ -287,7 +287,7 @@
      <rect>
       <x>2</x>
       <y>0</y>
-      <width>401</width>
+      <width>436</width>
       <height>62</height>
      </rect>
     </property>
@@ -397,7 +397,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_4">
+        <widget class="QPushButton" name="pbHelp">
          <property name="minimumSize">
           <size>
            <width>75</width>
