--- a/share/gui/smyrna.glade
+++ b/share/gui/smyrna.glade
@@ -6,7 +6,7 @@
 <widget class="GtkWindow" id="frmMain">
   <property name="width_request">900</property>
   <property name="height_request">700</property>
-  <property name="title" translatable="yes">Smyrna Graph visualizer ver: 1.0  ATT</property>
+  <property name="title" translatable="yes">Smyrna Graph Visualizer ver: 2.0  ATT (17 June 2013)</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER</property>
   <property name="modal">False</property>
